--- a/main.html
+++ b/main.html
@@ -2,16 +2,32 @@
 
 <head>
     <title>Countdown</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
+
 <body>
-    <div id="timer">00:00</div>
+    <div id="timer">00</div>
     <br>
-    <div id="x">X</div>
+
+    <div id="colorbox"></div>
+
     <br>
-    <button id = "start-stop">Start</button>
+    <label>Time:</label>
+    <input id = "time">
+    <br>
+    
+    <label>Interval:</label>
+    <input id = "interval">
+    <br>
+    
+    <button id = "start">Start</button>
     <button id = "reset">reset</button>
 
+
+
+    <script src = "intervaltimer.js"></script>
+   
 </body>
 
 </html>
