--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 
 
 <body>
-    <div id="timer">00</div>
+    <div id="timer">00:00</div>
     <br>
 
     <div id="colorbox"></div>
@@ -18,13 +18,15 @@
     <br>
     
     <label>Interval:</label>
-    <input id = "interval">
+    <input id = "interval_from">
+    <label>To</label>
+    <input id = "interval_to">
     <br>
     
     <button id = "start">Start</button>
     <button id = "reset">reset</button>
 
-
+    <button id = "test">test</button>
 
     <script src = "intervaltimer.js"></script>
    
