--- a/Intervaltimer/main.html
+++ b/Intervaltimer/main.html
@@ -1,33 +1,37 @@
 <!DOCTYPE html>
 
 <head>
-    <title>Countdown</title>
+    <title>Overtimers</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 
 <body>
-    <div id="timer">00:00</div>
-    <br>
-
     <div id="colorbox"></div>
-
     <br>
+
+    <div id="timer">00:00</div>
+   <br>
+
+   <div id = "timeinput">
     <label>Time:</label>
     <input id = "time">
     <br>
+</div>
     
+    <div id = "intervals">
     <label>Interval:</label>
     <input id = "interval_from">
     <label>To</label>
     <input id = "interval_to">
+    </div>
     <br>
-    
-    <button id = "start">Start</button>
-    <button id = "reset">reset</button>
 
-    <button id = "test">test</button>
-
+    <div class="button-container">
+        <button id="start">Start</button>
+        <button id="reset">reset</button>
+        <button id="test">test</button>
+    </div>
     <script src = "intervaltimer.js"></script>
    
 </body>
