--- a/IWP/lecture_1/get_string/getstrings.html
+++ b/IWP/lecture_1/get_string/getstrings.html
@@ -13,12 +13,14 @@
       for (let index = 0; index < 3; index++) {
         strings[index] = prompt("Enter string length")
       }
+
+      
       console.log(strings)
       let sum = 0;
       for(let balls of strings){
         sum += balls.length 
       }
-      console.log(sum/3);
+      console.log(sum/strings.length);
 
 
     </script>
