--- a/IWP/lecture_2/bmicalc_exercise_3/bmiStatus.html
+++ b/IWP/lecture_2/bmicalc_exercise_3/bmiStatus.html
@@ -10,7 +10,7 @@
       </head><body><section>
 <h1> BMI Status of Mickey </h1>
 <output>
-  Your BMI is 0. Since last, it has changed 0.  
+  Your BMI is 100. Since last, it has changed 8.  
 </output>
 </section>
 <section>
@@ -22,6 +22,6 @@
 </tr>
     <tr><th>Weight </th><th>BMI</th></tr>
   </thead>
-  <tbody><tr><td> 90</td> <td> 0 </td></tr><tr><td> 99</td> <td> 0 </td></tr></tbody></table>
+  <tbody><tr><td> 90</td> <td> 90 </td></tr><tr><td> 92</td> <td> 92 </td></tr><tr><td> 100</td> <td> 100 </td></tr></tbody></table>
 </section>
 </body></html>
