--- a/Intervaltimer/main.html
+++ b/Intervaltimer/main.html
@@ -9,8 +9,9 @@
 <body>
     <div class = "nav">
         <ul>
-            <li><a href="main.html">Home</a></li>
+            <li><u><a href="main.html">Home</a></u></li>
             <li><a href="timer.html">Timer</a></li>
+            <li><a href="vis_data.html">Visual Data</a></li>
             <li><a href="">Contact</a></li>
             <li><a href="">About</a></li>
         </ul>     
